# docs_ocr

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  models.manifest.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  prd.md  structure.md
notebooks/: README.md  research.ipynb
src/: main.py
src/core/: schemas.py
src/core/services/: extraction_service.py  ocr_service.py
src/infra/: model_store.py
src/providers/: extraction_provider.py  ocr_provider.py
tests/: README.md  test_application.py  test_extraction_service.py  test_ocr_service.py
